install_data(
  meson.project_name() + '.gschema.xml',
  install_dir: join_paths(get_option('datadir'), 'glib-2.0', 'schemas')
)

install_data(
  join_paths('icons', 'symbolic', 'nocturnal-symbolic.svg'),
  install_dir: join_paths(
    get_option('datadir'), 'icons', 'hicolor', 'scalable', 'status'
  )
)
